# game-engine

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
assets/shaders/: fragmentShader.glsl  vertexShader.glsl
assets/tilesets/: tiles.json
cmake_modules/: FindGLM.cmake
src/: Game.cpp  Game.h  ResourceManager.cpp  ResourceManager.h  SpriteRenderer.h  Texture2D.cpp  Texture2D.h  main.cpp
src/GameEngine/Assets/: ResourceManager.h
src/GameEngine/Assets/Levels/: TileSet.cpp  TileSet.h
src/GameEngine/Assets/Shaders/: Shader.cpp  Shader.h
src/GameEngine/Assets/Sprites/: Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h
src/GameEngine/Util/: Vertex.cpp  Vertex.h
